production/digital-media-object/digital-media-object-processor-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-digital-media-object-processor-web
  labels:
    app: dissco-digital-media-object-processor-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-digital-media-object-processor-web
  template:
    metadata:
      labels:
        app: dissco-digital-media-object-processor-web
        language: java
    spec:
      automountServiceAccountToken: false
      containers:
        - name: dissco-digital-media-object-processor-web
          image: public.ecr.aws/dissco/dissco-core-digital-media-object-processor:sha-695098c # Nov 25
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            failureThreshold: 2
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
